objects/Account.object
<CustomObject>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax_2__c</fullName>
        <label>Fax 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_3__c</fullName>
        <label>Phone 3</label>
        <type>Phone</type>
    </fields>
    <recordTypes>
        <fullName>Customer_Account</fullName>
        <active>true</active>
        <description>To specify the account as Customer</description>
        <label>Customer Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supplier_Account</fullName>
        <active>true</active>
        <description>To specify the account as Supplier</description>
        <label>Supplier Account</label>
    </recordTypes>
</CustomObject>